fixing gap

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -44,7 +44,7 @@ nav > span {
 }
 
 .menu b{
-    font-size: 50px;
+    font-size: 40px;
     cursor: none;
     /* vertical-align: middle; */
 }
